# eiwd

./: pyproject.toml
lab1/: Zadanie1_Spark_POL.ipynb  Zajecie3_Spark.ipynb  Zajecie_spark_2.ipynb
lab1/data/: POL.csv
lab1/data/monthly_stats_pol.csv/: .part-00000-f8881988-f945-451f-b616-1aa56eedc031-c000.csv.crc  part-00000-f8881988-f945-451f-b616-1aa56eedc031-c000.csv
lab1/data/monthly_stats_pol.json/: .part-00000-04758776-1ff9-4077-aef8-26270c650bcd-c000.json.crc  part-00000-04758776-1ff9-4077-aef8-26270c650bcd-c000.json
lab1/data/monthly_stats_pol.parquet/: .part-00000-3364f56e-ae96-4289-b8ae-09fba290623f-c000.snappy.parquet.crc  part-00000-3364f56e-ae96-4289-b8ae-09fba290623f-c000.snappy.parquet
lab1/data/wine_quality_stats.csv/: .part-00000-05d85fdd-34e5-48f0-8f0a-851e368b9c04-c000.csv.crc  part-00000-05d85fdd-34e5-48f0-8f0a-851e368b9c04-c000.csv
lab1/data/wine_quality_stats.json/: .part-00000-e3afc236-526b-48e3-9e82-1c0b4af36685-c000.json.crc  part-00000-e3afc236-526b-48e3-9e82-1c0b4af36685-c000.json
lab1/data/wine_quality_stats.parquet/: .part-00000-9f787b60-731c-4bbc-af5d-7a532cfc1045-c000.snappy.parquet.crc  part-00000-9f787b60-731c-4bbc-af5d-7a532cfc1045-c000.snappy.parquet
lab2/: analyze.py  lab2_exploracja_wizualizacja.ipynb  relative_risks.xlsx  relative_risks_cleaned.csv
lab3/: analyze.py  lab3_exploracja_wizualizacja.ipynb  process_data.py  relative_risks_cleaned.csv  untitled.ows  workflow_orange.ows
